--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2 class="section-title">Digite el nombre de sus amigos</h2>
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
-                <button id= "agregar" class="button-add" onclick="agregarAmigo()"">Añadir</button>
+                <button id= "agregar" class="button-add">Añadir</button>
             </div>
             <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
